2007-01-09  Per Bothner  <per@bothner.com>

	* files.scm (path-path): Rename to path-file.
	(pah-directory, path-parent, path-last, path-extension):
	New functions.

2007-01-08  Per Bothner  <per@bothner.com>

	* files.scm (file-exists?, file-directory?): Generalize to path.

2007-01-04  Per Bothner  <per@bothner.com>

	* files.scm (resource-uri): Use Path rather than URI_utils resolve.
	* files.scm (include-relative): Likewise.

	* misc.scm (base-uri): Use Path's currentPath method.

2007-01-02  Per Bothner  <per@bothner.com>

	* files.scm (path-query): Fix copy-paste thinko.

	* files.scm (resolve-uri): Fix implementation.

	* file.scm (path?, filepath?, URI?, absolute-path? path-scheme,
	path-authority, path-user-info, path-host, path-port, path-path,
	path-fragment, path-query): New functions.
	(->pathname): Use path constructor.
	(URI): Remove - now defined in LangObjType.
	(resolve-uri): Update.

	* ports.scm (open-input-file, open-output-file, call-with-input-file,
	call-with-output-file, with-input-from-file, with-output-to-file):
	Cast to path.

2006-12-20  Per Bothner  <per@bothner.com>

	* Makefile.am: Simplify - we use '$JAVA kawa.repl' rather than $KAWA1.

2006-11-17  Per Bothner  <per@bothner.com>

	* ports.scm (write-char): Use Char class's new print method.

2006-11-13  Per Bothner  <per@bothner.com>

	* files.scm: Update for SourceLocator-related changes.
	* syntax.scm: Likewise.

2006-10-30  Per Bothner  <per@bothner.com>

	* misc.scm (base-uri): Update Since BaseUri class is now gone.

2006-09-08  Per Bothner  <per@bothner.com>

	* numbers.scm: Add require of kawa.lib.syntax needed for
	define-procedure.

2006-09-03  Per Bothner  <per@bothner.com>

	* ports.scm (read): New function, transcribed from
	kawa/standard/read.java.
	(read-line): New function, transcribeconverted from argument-handling
	part of kawa/standard/read_line.java.

	* numbers.scm (atan): New function, transcribed from
	kawa/standard/atan.java.