@@ -1,3 +1,9 @@
+2007-02-01  Per Bothner  <per@bothner.com>
+
+	* files.scm (file-readable?, file-writable?, delete-file, rename-file,
+	copy-file, create-directory): Change parameter type to filepath.
+	(delete-file): If delete fails, throw exception.
+
 2007-01-09  Per Bothner  <per@bothner.com>
 
 	* files.scm (path-path): Rename to path-file.
